--- a/mixin.scss
+++ b/mixin.scss
@@ -27,6 +27,8 @@
 			top: 50%;
 			left: 50%;
 
+			width: 100%;
+			height: 100%;
 			min-height: 100%;
 			min-width: 100%;
 			object-fit: cover;
